<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input"
    android:layout_width="369dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="sans-serif"
        android:scaleType="center"
        android:text="@string/assign_task"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/taskName"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameTaskText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/taskName"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/worker"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/workerText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif"
        android:hint="@string/worker"
        android:inputType="text"
        tools:targetApi="jelly_bean" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_period" />

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/from_period"
        android:inputType="date"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_period" />

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/to_period"
        android:inputType="date"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@color/colorRed"

        android:text="@string/assign_button"
        android:textColor="@color/colorWhite" />
</LinearLayout>