<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WorkerActions.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewLog"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_loading"/>

             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/user_name_layout"
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:layout_height="wrap_content"

                 android:layout_marginTop="40dp"
                 android:text="@string/user_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/edit_text_design"
                android:hint="@string/user_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/holo_blue_light" />


             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/password_layout"
                 android:layout_width="match_parent"

                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="@string/password"

                 app:passwordToggleEnabled="true" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/edit_text_design"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/holo_blue_light" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@color/colorRed"

                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/colorWhite"
                android:text="@string/login_button"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/register_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/no_worker"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/numberAdmin"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:textColorLink="@color/design_default_color_primary"
                android:textColor="@color/design_default_color_primary"
                android:text="079665088" />

            <TextView
                android:id="@+id/orRegister"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sau" />
            <TextView
                android:id="@+id/registerlink"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColorLink="@color/design_default_color_primary"
                android:textColor="@color/design_default_color_primary"
                android:text="@string/register_button" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>