<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActions.RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <!--<ImageView
                android:id="@+id/userImage"
                android:layout_width="100dp"
                android:adjustViewBounds="true"
                android:background="@drawable/img"
                android:src="@drawable/ic_profile"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:layout_weight="1"/>-->

            <ImageView
                android:id="@+id/imageViewLog"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_loading" />

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">-->


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_name_layout"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:maxLines="1" />

            <!-- </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="horizontal">-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_prename_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/user_prename"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_prename_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/user_prename"
                android:inputType="text"
                android:maxLines="1" />
            <!--</LinearLayout>
        </LinearLayout>
-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_title_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/user_title"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/user_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/user_title_view"
                    android:hint="@string/user_title"
                    android:inputType="text"
                    android:maxLines="1"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_pass_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/password"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/user_pass_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_confpass_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/conf_password"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/user_confpass_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/conf_password"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@color/colorRed"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/colorWhite"
                android:text="@string/register_button"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>