<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewTask"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingTop="55dp"
    app:ignore="NamespaceTypo"
    card_view:cardCornerRadius="6dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/view2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    card_view:cardCornerRadius="40dp"
                    card_view:cardElevation="12dp"
                    card_view:cardPreventCornerOverlap="false"
                    card_view:contentPadding="0dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_profile2" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/info_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/linearImageButton"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/compNameId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/compLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comp_name"
                        android:textColor="#000000"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/comp_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:textColor="#808080" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/compPhoneId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/compNameId"
                    android:layout_weight="0.3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/phoneLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comp_phone"
                        android:textColor="#000000"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/comp_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:textColor="#808080" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/taskTitleId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/compPhoneId"
                    android:layout_weight="0.3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/taskLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taskName"
                        android:textColor="#000000"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/task_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:textColor="#808080" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/periodId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/taskTitleId"
                    android:layout_weight="0.3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/periodFromLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from_period"
                        android:textColor="#000000"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/task_periodFrom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:textColor="#808080" />

                    <TextView
                        android:id="@+id/periodToLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_period"
                        android:textColor="#000000"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/task_periodTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:textColor="#808080" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/workerID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/periodId"
                    android:layout_weight="0.3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/workerLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/worker_designer"
                        android:textColor="#000000"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/infoWorker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:textColor="#808080" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/noTaskDataView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noTask"
        android:visibility="gone" />
</androidx.cardview.widget.CardView>